Added some hash functions and IsPalindrome.

--- a/ExtensionsDeluxe/StringExtension/StringExtensions.csproj
+++ b/ExtensionsDeluxe/StringExtension/StringExtensions.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JaroWinkler.cs" />
+    <Compile Include="StringCryptography.cs" />
     <Compile Include="StringFactoryExtensions.cs" />
     <Compile Include="StringMetricsExtensions.cs" />
     <Compile Include="StringModifyingExtensions.cs" />
