--- a/ExtensionsDeluxe/IntegerExtensions/IntegerExtensions.csproj
+++ b/ExtensionsDeluxe/IntegerExtensions/IntegerExtensions.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IntegerFactoryExtensions.cs" />
+    <Compile Include="NumberExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
