Added some test for string extensions and fixed a couple of string extension methods such as Right and Middle.

--- a/ExtensionsDeluxe/UnitTestProject/UnitTestProject.csproj
+++ b/ExtensionsDeluxe/UnitTestProject/UnitTestProject.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="UnitTestNumbers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestStringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BitmapExtensions\BitmapExtensions.csproj">
