Added methods to calculate Double Metaphone keys.  Changed IsHomophone method to be based on Double Metaphone Primary Key because I was getting better results.  Added more unit tests for StringExtensions.

--- a/ExtensionsDeluxe/StringExtension/StringExtensions.csproj
+++ b/ExtensionsDeluxe/StringExtension/StringExtensions.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DoubleMetaphone.cs" />
     <Compile Include="JaroWinkler.cs" />
     <Compile Include="Service References\DictionaryService\Reference.cs">
       <AutoGen>True</AutoGen>
