--- a/ExtensionsDeluxe/StringExtension/StringExtensions.csproj
+++ b/ExtensionsDeluxe/StringExtension/StringExtensions.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DoubleMetaphone.cs" />
     <Compile Include="JaroWinkler.cs" />
+    <Compile Include="ProperNameCollection.cs" />
     <Compile Include="Service References\DictionaryService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
